Fix padding on mobile screens.

--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,7 @@ html {
 
 .container p {
   margin: 0;
+  padding: 0 1em;
   font-family: "Courier New", Courier, monospace;
   color: #fff;
 }
